# OTUS-spacebattle

./: .clang_format  CMakeLists.txt
.github/workflows/: cmake.yml
src/: BurnFuel.h  CheckFuel.h  CommandException.h  IFuelable.h  IMovable.h  IRotable.h  MacroCommand.h  Move.h  Rotate.h  SimpleFuelable.h  SimpleIMovable.h  SimpleIRotable.h  Vector.h
test/: ErrorIMovable.h  fuel_test.cpp  macro_test.cpp  move_test.cpp  rotate_test.cpp
